# hermes-go

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.agents/: AGENTS.md
docs/: jp_weather_implementation_plan.md  jp_weather_migration.md  jp_weather_task.md  jp_weather_walkthrough.md  places_implementation.md  ubike_implementation.md  weather_implementation_plan.md  weather_task.md  weather_walkthrough.md
frontend/: .gitignore  README.md  index.html  jest.config.cjs  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.jest.json
frontend/e2e/: dashboard.spec.ts  visual.spec.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: MapContainer.test.tsx  MapContainer.tsx  Sidebar.test.tsx  Sidebar.tsx
frontend/src/tests/mocks/: leafletMock.js
frontend/src/utils/: helpers.test.ts  helpers.ts
src/: server.py
src/jp_weather/: README.md  api.py  cache.py  cli.py  formatter.py  suncalc.py
src/jptrain/: README.md  __init__.py  api.py  cache.py  cli.py  formatter.py
src/places/: README.md  api.py  cli.py
src/tw_weather/: README.md  __init__.py  api.py  cache.py  cli.py
src/twbus/: README.md  __init__.py  api.py  cache.py  cli.py
src/ubike/: README.md  __init__.py  api.py  cache.py  cli.py
tests/: test_api.py  test_cache.py  test_golden.py  test_jp_weather.py  test_places.py  test_server_jp_weather.py  test_suncalc.py  test_tw_weather.py  test_twbus.py  test_ubike.py  test_weather_enhancements.py
