[project]
name = "hermes-go"
version = "0.4.0"

description = "A unified CLI tool for querying Japan railways status (jptrain) and Taiwan TDX bus arrival info (twbus)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.4.1",
    "platformdirs>=4.10.0",
    "questionary>=2.1.1",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
jptrain = "jptrain.cli:cli"
twbus = "twbus.cli:cli"
ubike = "ubike.cli:cli"
places = "places.cli:cli"
tw-weather = "tw_weather.cli:cli"


[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
